# lightsocks-androidx

./: .gitignore  build.gradle  readme.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/handhandlab/lightsocks/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/aidl/com/handhandlab/lightsocks/: ILightsocksService.aidl  ILightsocksServiceCallback.aidl
app/src/main/assets/arm64-v8a/: badvpn-tun2socks  badvpn-udpgw
app/src/main/assets/x86/: badvpn-tun2socks  badvpn-udpgw
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/badvpn/: CMakeLists.txt
app/src/main/cpp/badvpn-master/: CMakeLists.txt
app/src/main/cpp/badvpn-master/base/: BLog.h
app/src/main/cpp/badvpn-master/system/: BSignal.c
app/src/main/cpp/badvpn-master/tun2socks/: CMakeLists.txt  tun2socks.c  tun2socks.h
app/src/main/cpp/badvpn-master/tuntap/: BTap.c
app/src/main/cpp/badvpn/tun2socks/: CMakeLists.txt  tun2socks.c  tun2socks.h
app/src/main/cpp/badvpn/udpgw/: udpgw.c
app/src/main/cpp/libevent/: CMakeLists.txt
app/src/main/cpp/lightsocks/: CMakeLists.txt  base64.cpp  lightsocks_android_encryptor.cpp  lightsocks_android_server.cpp
app/src/main/cpp/lightsocks/include/: lightsocks_android_encryptor.h  lightsocks_android_server.h  testlib.h
app/src/main/cpp/nativelib/: CMakeLists.txt  lightsocks_droid.cpp  native-lib.cpp
app/src/main/cpp/testlib/: CMakeLists.txt  testlib.cpp
app/src/main/cpp/testlib/include/: testlib.h
app/src/main/java/com/handhandlab/lightsocks/: LightsocksDroidNative.kt  NativeStatusCallback.kt
app/src/main/java/com/handhandlab/lightsocks/ui/: MainActivity.kt
app/src/main/java/com/handhandlab/lightsocks/utils/: AssetUtils.kt  LightsocksDroid.kt  TcpSocketTester.kt
app/src/main/java/com/handhandlab/lightsocks/vpn/: LSVPNService.kt  LightsocksVPNService.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/handhandlab/lightsocks/: ExampleUnitTest.kt
docker/: dockerfile  lightsocks-server  udpgw
gradle/wrapper/: gradle-wrapper.properties
